# oh-my-logo-py

./: README.ja.md  README.md  pyproject.toml
scripts/: format.sh  install.sh  run.sh  typecheck.sh
src/oh_my_logo_py/: __init__.py  lib.py  main.py  palettes.py  renderer.py
